--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ hamburger
   position: fixed;
   bottom: 5vh;
   right: 5vw;
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  background: linear-gradient(0deg, #750b20, #dd134c);
   display: grid;
   place-items: center;
   border-radius: 0.25rem;
@@ -175,12 +175,12 @@ hamburger
   z-index: -1;
 }
 .top-link::before {
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  background: linear-gradient(0deg, #750b20, #dd134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .top-link::after {
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
+  background: linear-gradient(0deg, #dc134c, #750b20);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
 .top-link i {
@@ -267,7 +267,7 @@ hamburger
   background: linear-gradient(0deg, #000a, rgba(0, 0, 0, 0.3));
 }
 .btn::after {
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
 @media (min-width: 820px) {
@@ -1256,7 +1256,7 @@ hamburger
 }
 .welcome-section .hero #cta-header::before {
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  background: linear-gradient(0deg, #750b20, #dd134c);
 }
 .welcome-section .hero #cta-header::after {
   opacity: 1;
@@ -1266,8 +1266,8 @@ hamburger
   transition: 0.3s;
   outline: none;
   border: none;
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
+  background: linear-gradient(0deg, #dc134c, #750b20);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
 }
 .welcome-section .hero #cta-header span {
   position: relative;
@@ -1504,12 +1504,12 @@ hamburger
   z-index: -1;
 }
 #menu .menu-section .menu-content .menu-cta .page-btn::before {
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  background: linear-gradient(0deg, #750b20, #dd134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 #menu .menu-section .menu-content .menu-cta .page-btn::after {
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
+  background: linear-gradient(0deg, #dc134c, #750b20);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
 @media (min-width: 820px) {
@@ -1915,13 +1915,13 @@ hamburger
   transition: 0.2s;
 }
 #skills .skills .dropdown .dropbtn::before {
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  background: linear-gradient(0deg, #750b20, #dd134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 #skills .skills .dropdown .dropbtn::after {
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
+  background: linear-gradient(0deg, #dc134c, #750b20);
   opacity: 0;
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
 }
 #skills .skills .dropdown .dropbtn.active {
   transform: scale(0.98);
@@ -2417,11 +2417,11 @@ hamburger
   z-index: -1;
 }
 #contact .contact .contact-items .contact-item .contact-info a::before {
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  background: linear-gradient(0deg, #750b20, #dd134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 #contact .contact .contact-items .contact-item .contact-info a::after {
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
+  background: linear-gradient(0deg, #dc134c, #750b20);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
   opacity: 0;
 }
@@ -2667,10 +2667,10 @@ hamburger
   z-index: -1;
 }
 #projects .projects .all-projects .project-item .project-tile .project-info a::before {
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  background: linear-gradient(0deg, #750b20, #dd134c);
 }
 #projects .projects .all-projects .project-item .project-tile .project-info a::after {
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
+  background: linear-gradient(0deg, #dc134c, #750b20);
   opacity: 0;
 }
 #projects .projects .all-projects .project-item .project-tile .project-info a i {
@@ -2925,10 +2925,32 @@ hamburger
   transition: 0.25s;
 }
 .work .work-container .item .item-header .item-cta a.cta-primary {
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  background: #dc143c;
   border: none;
   color: #f4f4f4;
   font-weight: 500;
+  position: relative;
+  isolation: isolate;
+}
+.work .work-container .item .item-header .item-cta a.cta-primary::after, .work .work-container .item .item-header .item-cta a.cta-primary::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.25rem;
+  transition: 0.25s ease;
+  z-index: -1;
+}
+.work .work-container .item .item-header .item-cta a.cta-primary::before {
+  background: linear-gradient(0deg, #750b20, #dd134c);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.work .work-container .item .item-header .item-cta a.cta-primary::after {
+  background: linear-gradient(0deg, #dc134c, #750b20);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
+  opacity: 0;
 }
 .work .work-container .item .item-header .item-cta a.cta-secondary {
   border: 1px solid #485563;
@@ -2947,6 +2969,12 @@ hamburger
   .work .work-container .item .item-header .item-cta a:hover i {
     transform: translateX(0.4rem);
   }
+  .work .work-container .item .item-header .item-cta a:hover::before {
+    opacity: 0;
+  }
+  .work .work-container .item .item-header .item-cta a:hover::after {
+    opacity: 1;
+  }
 }
 @media (max-width: 768px) {
   .work .work-container .item .item-header .item-cta a:active {
@@ -2955,6 +2983,12 @@ hamburger
   }
   .work .work-container .item .item-header .item-cta a:active i {
     transform: translateX(0.4rem);
+  }
+  .work .work-container .item .item-header .item-cta a:active::before {
+    opacity: 0;
+  }
+  .work .work-container .item .item-header .item-cta a:active::after {
+    opacity: 1;
   }
 }
 .work .work-container .item .item-content {
@@ -3233,12 +3267,12 @@ hamburger
   background: #dc143c8c;
 }
 .work .work-items .work-item .view-site-btn::before {
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  background: linear-gradient(0deg, #750b20, #dd134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .work .work-items .work-item .view-site-btn::after {
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
+  background: linear-gradient(0deg, #dc134c, #750b20);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
 .work .work-items .work-item .view-repo-btn {
@@ -3383,7 +3417,7 @@ hamburger
   opacity: 1;
 }
 .about .col-right button {
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  background: linear-gradient(0deg, #750b20, #dd134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
   color: #fff;
   margin: 1rem auto;
@@ -3411,8 +3445,8 @@ hamburger
   width: 100%;
   height: 100%;
   opacity: 1;
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
+  background: linear-gradient(0deg, #dc134c, #750b20);
   transition: 0.2s;
 }
 .about .col-right button:hover {
@@ -3784,11 +3818,11 @@ hamburger
   transition: 0.3s ease;
 }
 #footer .footer form button::before {
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  background: linear-gradient(0deg, #750b20, #dd134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 #footer .footer form button::after {
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
+  background: linear-gradient(0deg, #dc134c, #750b20);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
   opacity: 0;
 }
@@ -3901,7 +3935,7 @@ hamburger
 }
 #footer .footer .socialMedia-links .socialMedia-item a::after {
   opacity: 0;
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 4px 2px rgba(0, 0, 0, 0.25);
 }
 @media (max-width: 768px) {
   #footer .footer .socialMedia-links .socialMedia-item a {
