--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -133,7 +133,7 @@
                         text-transform: capitalize;
                         font-size: .95rem;
                         font-size: clamp(.95rem, 1vw, 1.15rem);
-                        border-radius: .25rem;
+                        border-radius: $border-radius-sm;
                         width: 100%;
                         text-align: center;
                         letter-spacing: .025rem;
@@ -153,11 +153,33 @@
                             transition: .25s;
                         }
                         &.cta-primary {
-                            background: $button-crimson;
+                            background: $span-crimson;
                             border: none;
                             color: $text-light;
                             font-weight: 500;
-                            
+                            position: relative;
+                            isolation: isolate;
+                            // PSEUDO BG
+                            &::after, &::before {
+                                content: '';
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 100%;
+                                height: 100%;
+                                border-radius: $border-radius-sm;
+                                transition: .25s ease;
+                                z-index: -1;
+                            }
+                            &::before {
+                                background: $button-crimson;
+                                box-shadow: $box-light-top-sm;
+                            }
+                            &::after {
+                                background: $button-crimson-hover;
+                                box-shadow: $box-light-top-sm-hover;
+                                opacity: 0;
+                            }
                         }
                         &.cta-secondary {
                             border: 1px solid $overlay-blue-light;
@@ -174,20 +196,22 @@
                             &:hover {
                                 transform: scale(.98);
                                 letter-spacing: normal;
-
                                 i {
                                     transform: translateX(.4rem);
                                 }
+                                &::before {opacity: 0;}
+                                &::after {opacity: 1;}
                             }
                         }
                         @media (max-width: 768px) {
                             &:active {
                                 transform: scale(.98);
                                 letter-spacing: normal;
-
                                 i {
                                     transform: translateX(.4rem);
                                 }
+                                &::before {opacity: 0;}
+                                &::after {opacity: 1;}
                             }
                         }
                     }
