--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -153,14 +153,16 @@
                 font-family: $font-title;
                 font-weight: 500;
                 font-size: 2.5rem;
+                font-size: clamp(2.5rem, 6vw, 3rem);
                 color: $text-light;
                 line-height: 1.25;
                 @include lg {
-                    font-size: 3.5rem;
+                    // font-size: 3.5rem;
                 }
             }
             p {
                 font-size: .85rem;
+                font-size: clamp(.85rem, 2vw, 1.15rem);
                 font-weight: 400;
                 color: $brand;
                 // margin-bottom: .25rem;
@@ -170,7 +172,7 @@
                     font-size: inherit;
                 }
                 @include lg {
-                    font-size: 1.35rem;
+                    // font-size: 1.35rem;
                 }
             }
 
