--- a/css/style.css
+++ b/css/style.css
@@ -2870,6 +2870,9 @@ hamburger
   color: #f4f4f4;
   transition: 0.25s;
 }
+.work .work-container .item .item-header .item-meta-data li::first-letter {
+  text-transform: capitalize;
+}
 .work .work-container .item .item-header .item-meta-data li:hover {
   color: #bfbfbf;
 }
