--- a/css/style.css
+++ b/css/style.css
@@ -691,6 +691,7 @@ hamburger
     padding: 0;
     width: 50%;
     display: block;
+    font-size: 1rem;
     font-weight: 400;
     font-family: "Montserrat", sans-serif;
     font-family: "Kanit", sans-serif;
