--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -217,6 +217,7 @@
                                     padding: 0;
                                     width: 50%;
                                     display: block;
+                                    font-size: 1rem;
                                     font-weight: 400;
                                     font-family: $font-content;
                                     font-family: $font-title;
