--- a/css/style.css
+++ b/css/style.css
@@ -1999,12 +1999,12 @@ hamburger
   isolation: isolate;
 }
 #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item.io-item {
-  transform: scale(0);
+  transform: translateY(5vh);
   opacity: 0;
   transition: 0.5s;
 }
 #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item.active-item {
-  transform: scale(1);
+  transform: translateY(0);
   opacity: 1;
   transition: 1.5s;
 }
