--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -273,12 +273,12 @@
 
                         // IO CLASS
                         &.io-item {
-                            transform: scale(0);
+                            transform: translateY(5vh);
                             opacity: 0;
                             transition: .5s;
                         }
                         &.active-item {
-                            transform: scale(1);
+                            transform: translateY(0);
                             opacity: 1;
                             transition: 1.5s;
                         }
