--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -246,6 +246,20 @@
                     }
                 }
             }
+
+            // IO CLASS
+            &.io-item {
+                opacity: 0;
+                transform: translateY(5vh);
+                transition: 1.25s;
+                
+            }
+            // ACTIVE ITEM
+            &.active-item {
+                opacity: 1;
+                transform: translateY(0);
+                
+            }
         }
     }
 
