--- a/css/style.css
+++ b/css/style.css
@@ -3465,6 +3465,7 @@ hamburger
   text-align: left;
   z-index: 1;
   font-size: 1rem;
+  line-height: 1.5;
   font-weight: 400;
   z-index: 2;
   transition: 1.5s;
@@ -3494,10 +3495,12 @@ hamburger
   transition: 0.2s;
 }
 .about .col-right .article-container article p a.cv {
-  text-decoration: underline;
+  background-color: #29323c;
+  color: #f4f4f4;
+  padding: 0 0.25rem;
 }
 .about .col-right .article-container article p a.cv:hover {
-  text-decoration: none;
+  color: #bfbfbf;
 }
 @media (max-width: 820px) {
   .about .col-right .article-container article p a:active {
