--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -177,6 +177,7 @@
                     text-align: left;
                     z-index: 1;
                     font-size: 1rem;
+                    line-height: 1.5;
                     font-weight: 400;
                     z-index: 2;
                     transition: 1.5s;
@@ -207,13 +208,11 @@
                         transition: .2s;
 
                         &.cv {
-                            // background-color: $overlay-blue-light;
-                            // color: $text-light;
-                            // padding: .25rem .5rem ;
-                            // display: block;
-                            text-decoration: underline;
+                            background-color: $overlay-blue-dark;
+                            color: $text-light;
+                            padding: 0 .25rem;
                             &:hover {
-                                text-decoration: none;
+                                color: $brand;
                             }
                         }
                         @media (max-width: 820px){
