--- a/css/style.css
+++ b/css/style.css
@@ -3463,8 +3463,8 @@ hamburger
   margin-bottom: 1.5rem;
   text-overflow: ellipsis;
   text-align: left;
-  z-index: 1;
   font-size: 1rem;
+  font-size: clamp(1rem, 1.5vw, 1.125rem);
   line-height: 1.5;
   font-weight: 400;
   z-index: 2;
@@ -3504,22 +3504,24 @@ hamburger
 }
 @media (max-width: 820px) {
   .about .col-right .article-container article p a:active {
-    color: #dc143c;
+    color: #bfbfbf;
+    background: #15191e;
   }
 }
 @media (min-width: 820px) {
   .about .col-right .article-container article p a:hover {
-    color: #dc143c;
+    color: #bfbfbf;
+    background: #15191e;
   }
 }
 .about .col-right .article-container article p.intro {
   font-weight: 500;
 }
 .about .col-right .article-container article p.intro.intro::first-letter {
-  font-size: 2.5em;
+  font-size: 2rem;
+  font-size: clamp(2rem, 5vw, 2.25rem);
   float: left;
   background: #15191e;
-  color: #fff9;
   color: #f4f4f4;
   padding: 0 0.1em;
   margin-right: 0.1em;
