--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -7,8 +7,8 @@ $font-content: 'Montserrat', sans-serif;
 // TEXT SIZES
 $font-clamp-xsm: clamp(.85rem, 1.5vw, 1.15rem);
 $font-clamp-sm: clamp(.95rem, 2vw, 1.125rem);
-$font-clamp-md: clamp(.95rem, 1.5vw, 1.15rem);
-$font-clamp-lg: clamp(.95rem, 1.5vw, 1.15rem);
+$font-clamp-md: clamp(1.25rem, 2.25vw, 1.5rem);
+$font-clamp-lg: clamp(2.5rem, 6vw, 3rem);
 // TEXT COLORS
 $text-black: #000;
 $text-dark: #000;
