--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -585,7 +585,7 @@
                         align-items: center;
                         gap: 1rem;
                         padding: .5rem;
-
+                        display: none;
                         a {
                             color: $text-light;
                             letter-spacing: .05rem;
