--- a/css/style.css
+++ b/css/style.css
@@ -956,6 +956,7 @@ hamburger
     align-items: center;
     gap: 1rem;
     padding: 0.5rem;
+    display: none;
   }
   .header .navbar #nav .nav-list .contact-links a {
     color: #f4f4f4;
@@ -1101,7 +1102,7 @@ hamburger
 .welcome-section .hero #hero-content .hero-title .hero-title-header {
   line-height: 1.25;
   font-size: 0.85rem;
-  font-size: clamp(.85rem, 1.5vw, 1.15rem);
+  font-size: clamp(.85rem, 1.25vw, 1.15rem);
   font-weight: 400;
   color: #bfbfbf;
 }
