--- a/css/style.css
+++ b/css/style.css
@@ -1105,10 +1105,19 @@ hamburger
   font-size: clamp(.85rem, 1.25vw, 1.15rem);
   font-weight: 400;
   color: #bfbfbf;
+  animation: header 6.5s ease forwards 2.5s;
 }
 .welcome-section .hero #hero-content .hero-title .hero-title-header a {
   color: inherit;
   font-size: inherit;
+}
+@keyframes header {
+  0%, 50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .welcome-section .hero #hero-content .hero-title .hero-description {
   text-transform: capitalize;
@@ -1120,10 +1129,13 @@ hamburger
   font-size: clamp(2.5rem, 6vw, 3rem);
   font-size: clamp(2.5rem, 6vw, 3rem);
   color: #f4f4f4;
-  animation: name 4s ease forwards 2.5s;
+  animation: name 6s ease forwards 2.5s;
 }
 @keyframes name {
   0% {
+    opacity: 0;
+  }
+  50% {
     opacity: 0;
   }
   100% {
@@ -1147,14 +1159,15 @@ hamburger
   color: #bfbfbf;
   margin-top: 0.5rem;
   font-family: "Montserrat", sans-serif;
+  animation: meta 8s ease forwards 2.5s;
 }
-@keyframes aka {
-  10% {
+@keyframes meta {
+  0%, 50% {
     transform: translateX(1rem);
-    opacity: 1;
+    opacity: 0;
   }
   100% {
-    opacity: 0.8;
+    opacity: 1;
   }
 }
 .welcome-section .hero #cta-header {
@@ -1169,6 +1182,8 @@ hamburger
   border-radius: 1rem;
   border: none;
   outline: none;
+  animation: show-cta 10s ease-in-out 2.5s;
+  animation-fill-mode: forwards;
   transition: 0.3s linear;
   cursor: pointer;
   -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
@@ -1198,11 +1213,11 @@ hamburger
   }
 }
 @keyframes show-cta {
-  60% {
-    opacity: 1;
-    transform: scale(1) translateX(2rem);
+  0%, 50% {
+    opacity: 0;
+    transform: translateX(2rem);
   }
-  100% {
+  80% {
     opacity: 1;
     transform: translateX(0);
   }
