--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -152,10 +152,19 @@
                     font-size: $font-clamp-xsm;
                     font-weight: 400;
                     color: $brand;
-
                     a {
                         color: inherit;
                         font-size: inherit;
+                    }
+                    animation: header 6.5s ease forwards 2.5s;
+
+                    @keyframes header {
+                        0%, 50% {
+                            opacity: 0;
+                        }
+                        100% {
+                            opacity: 1;
+                        }
                     }
                 }
 
@@ -170,13 +179,15 @@
                     font-size: clamp(2.5rem, 6vw, 3rem);
                     font-size: $font-clamp-lg;
                     color: $text-light;
-                    animation: name 4s ease forwards 2.5s;
+                    animation: name 6s ease forwards 2.5s;
 
                     @keyframes name {
                         0% {
                             opacity: 0;
                         }
-
+                        50% {
+                            opacity: 0;
+                        }
                         100% {
                             opacity: 1;
                         }
@@ -205,15 +216,16 @@
                 color: $brand;
                 margin-top: .5rem;
                 font-family: $font-content;
+                animation: meta 8s ease forwards 2.5s;
 
-                @keyframes aka {
-                    10% {
+                @keyframes meta {
+                    0%, 50% {
                         transform: translateX(1rem);
-                        opacity: 1;
+                        opacity: 0;
                     }
 
                     100% {
-                        opacity: .8;
+                        opacity: 1;
                     }
                 }
             }
@@ -252,7 +264,8 @@
             // transform: translateX(-10vw);
             // transform-style: preserve-3d;
             // animation: show-cta 3s ease-in-out 13s;
-            // animation-fill-mode: forwards;
+            animation: show-cta 10s ease-in-out 2.5s;
+            animation-fill-mode: forwards;
             transition: .3s linear;
             cursor: pointer;
             -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
@@ -260,15 +273,15 @@
 
             // show cta
             @keyframes show-cta {
-                60% {
+                0% , 50% {
+                    opacity: 0;
+                    transform:  translateX(2rem);
+                }
+                80% {
                     opacity: 1;
-                    // transition: ease-out;
-                    transform: scale(1) translateX(2rem);
+                    transform: translateX(0);
                 }
                 100% {
-                    opacity: 1;
-                    // transition: ease-in;
-                    transform: translateX(0);
                 }
             }
 
