--- a/css/style.css
+++ b/css/style.css
@@ -1105,7 +1105,7 @@ hamburger
   font-size: clamp(.85rem, 1.25vw, 1.15rem);
   font-weight: 400;
   color: #bfbfbf;
-  animation: header 6s ease forwards 4s;
+  animation: header 4s ease forwards 4s;
 }
 .welcome-section .hero #hero-content .hero-title .hero-title-header a {
   color: inherit;
@@ -1123,16 +1123,17 @@ hamburger
   text-transform: capitalize;
   text-align: center;
   text-align: left;
+  line-height: 1.4;
   font-family: "Kanit", sans-serif;
   font-weight: 500;
   font-size: 2.5rem;
   font-size: clamp(2.5rem, 6vw, 3rem);
   font-size: clamp(2.5rem, 6vw, 3rem);
   color: #f4f4f4;
-  animation: name 4s ease forwards 4s;
+  animation: name 8s ease forwards 4s;
 }
 @keyframes name {
-  0% {
+  0%, 30% {
     opacity: 0;
   }
   100% {
@@ -1159,7 +1160,7 @@ hamburger
   animation: meta 8s ease forwards 4s;
 }
 @keyframes meta {
-  0%, 20% {
+  0%, 50% {
     transform: translateX(1rem);
     opacity: 0;
   }
@@ -1210,7 +1211,7 @@ hamburger
   }
 }
 @keyframes show-cta {
-  0%, 40% {
+  0%, 60% {
     opacity: 0;
     transform: translateX(1rem);
   }
