--- a/css/style.css
+++ b/css/style.css
@@ -1114,9 +1114,11 @@ hamburger
 @keyframes header {
   0%, 20% {
     opacity: 0;
+    transform: translateY(1rem);
   }
   100% {
     opacity: 1;
+    transform: translateY(0);
   }
 }
 .welcome-section .hero #hero-content .hero-title .hero-description {
@@ -1133,7 +1135,7 @@ hamburger
   animation: name 8s ease forwards 4s;
 }
 @keyframes name {
-  0%, 30% {
+  0%, 20% {
     opacity: 0;
   }
   100% {
@@ -1157,14 +1159,15 @@ hamburger
   color: #bfbfbf;
   margin-top: 0.5rem;
   font-family: "Montserrat", sans-serif;
-  animation: meta 8s ease forwards 4s;
+  animation: meta 6s ease forwards 4s;
 }
 @keyframes meta {
-  0%, 50% {
-    transform: translateX(1rem);
+  0%, 40% {
+    transform: translateY(1rem);
     opacity: 0;
   }
   100% {
+    transform: translateY(0);
     opacity: 1;
   }
 }
@@ -1211,7 +1214,7 @@ hamburger
   }
 }
 @keyframes show-cta {
-  0%, 60% {
+  0%, 45% {
     opacity: 0;
     transform: translateX(1rem);
   }
