--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -161,9 +161,11 @@
                     @keyframes header {
                         0%, 20% {
                             opacity: 0;
+                            transform: translateY(1rem);
                         }
                         100% {
                             opacity: 1;
+                            transform: translateY(0);
                         }
                     }
                 }
@@ -183,11 +185,13 @@
                     animation: name 8s ease forwards 4s;
 
                     @keyframes name {
-                        0%, 30% {
+                        0%, 20% {
                             opacity: 0;
+                            // transform: translateY(1rem);
                         }
                         100% {
                             opacity: 1;
+                            // transform: translateY(0);
                         }
                     }
                 }
@@ -214,15 +218,16 @@
                 color: $brand;
                 margin-top: .5rem;
                 font-family: $font-content;
-                animation: meta 8s ease forwards 4s;
+                animation: meta 6s ease forwards 4s;
 
                 @keyframes meta {
-                    0%, 50% {
-                        transform: translateX(1rem);
+                    0%, 40% {
+                        transform: translateY(1rem);
                         opacity: 0;
                     }
 
                     100% {
+                        transform: translateY(0);
                         opacity: 1;
                     }
                 }
@@ -271,7 +276,7 @@
 
             // show cta
             @keyframes show-cta {
-                0%, 60% {
+                0%, 45% {
                     opacity: 0;
                     transform:  translateX(1rem);
                 }
