--- a/css/style.css
+++ b/css/style.css
@@ -1028,6 +1028,7 @@ hamburger
     height: 100%;
     z-index: -1;
     background: radial-gradient(transparent, #000);
+    background-attachment: fixed;
   }
   @keyframes desktopIntro {
     0% {
