--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -136,8 +136,8 @@
                     font-weight: 400;
                     text-transform: capitalize;
                     color: $text-light;
-                    // background-color: $overlay-blue-darker;
-                    background: $overlay-dark;
+                    background-color: $overlay-blue-dark;
+                    // background: $overlay-dark;
                     // border: 1px solid #fff2;
                     padding-left: .2rem;
                     border-radius: $border-radius-sm;
