--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,7 @@ hamburger
   font-weight: 400;
   text-transform: capitalize;
   color: #f4f4f4;
-  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
+  background-color: #29323c;
   padding-left: 0.2rem;
   border-radius: 0.25rem;
   overflow: hidden;
